# infinexpense-api

./: .coverage  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  sample.json
alembic/: env.py
alembic/versions/: 0e72c69da55a_updated_receipt_model_3.py  2a632b88c2af_updated_receipt_model_2.py  3bdf2729a979_updated_receipt_model.py  431580bc5c77_updated_table.py  4726c98c509f_add_all_models.py  6a06879cdf32_add_all_models.py  9c0ac404301c_add_all_models.py  b6a722535b95_updated_receipt_model_2.py  fb54a631a0dc_new_receipt_model.py
infinexpense-api/src/: main.py
ops/: poetry.Dockerfile
src/: database.py  main.py  settings.py
src/models/: category.py  measurement.py  measurement_unit.py  merchant.py  product.py  receipt.py  receipt_product.py
src/routers/: categories.py  measurement_units.py  merchants.py  products.py  receipts.py  reports.py  uploads.py
src/schemas/: report.py  (+6 more)
static/: CSS_ORGANIZATION.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  categories.html  category-add.html  category-edit-3001.html  index.html  merchant-4001.html  merchant-4002.html  merchant-add.html  merchant-edit-4001.html  merchants.html  product-2001.html  product-add.html  product-edit-2001.html  products.html  receipt-1001.html  receipt-add.html  receipt.js  receipts.html  style.css  styles.css  styles_old.css  test-dark-mode.html
test_static/: index.html  receipt.js  style.css
tests/: conftest.py  test_categories.py  test_merchants.py  test_products.py  test_receipt_product_service.py  test_receipts.py
(+115 files in other folders)
